--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 *
-!raza/
-!ArraysDemo/
-!com/
-!ForLoops1/
-!nothing/
-!random/
+!raza/*
+!ArraysDemo/*
+!com/*
+!ForLoops1/*
+!nothing/*
+!random/*
 !/README.md
 
 
