--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-*
-!raza/*
-!ArraysDemo/*
-!com/*
-!ForLoops1/*
-!nothing/*
-!random/*
-!/README.md
+/*
+!raza/
+!ArraysDemo/
+!com/
+!forloops1/
+!nothing/
+!random/
+!README.md
 
 
 
