added all files in sequence

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,14 @@
 !forloops1/
 !nothing/
 !random/
+!setDemo/
+!lambda/
+!keyboard/
+!java/
+!interface/
+!ForLoopDemo
+!DieRoll/
+!custom comparator/
 !README.md
 
 
